<resources>
    <string name="app_name">Frealicane</string>
    <string name="device_chinese">设备</string>
    <string name="ble_english">BLE</string>
    <string name="control_chinese">控制</string>
    <string name="wifi_english">WIFI</string>
    <string name="me_chinese">我的</string>
    <string name="hint_chinese">提示</string>
    <string name="app_need_permission_chinese">您当前的操作需要该权限才可调度此设备硬件正常工作</string>
    <string name="give_chinese">授予</string>
    <string name="reject_chinese">拒绝</string>
    <string name="permission_apply_check_threader">PermissionApplyCheck method cannot be called from the main Thread</string>
    <string name="package_name">com.org701enti.frealicane</string>
    <string name="unknown_device_chinese">未知设备</string>
    <string name="device_name_english">DeviceName</string>
    <string name="vertical_slide_text_to_stop_sacn_chinese">上下滑动文字以停止扫描</string>
    <string name="horizontal_slide_text_to_start_sacn_chinese">左右滑动文字来启动扫描</string>
    <string name="meter_chinese">米</string>
    <string name="error_chinese">错误</string>
    <string name="bluetooth_support_lack_chinese">缺少蓝牙支持</string>
    <string name="user_device_hardware_not_support_chinese">您的设备的硬件目前不支持所需操作</string>
    <string name="cancel_chinese">取消</string>
    <string name="return_app_chinese">退出APP</string>
    <string name="control_fragment">ControlFragment</string>
    <string name="please_continue_control_chinese">您现在可以继续操作</string>
    <string name="return_chinese">返回</string>
    <string name="add_chinese">添加</string>
    <string name="stick_to_top_chinese">置顶</string>
    <string name="update_device_information_chinese">现在更新设备信息</string>
    <string name="insert_new_device_information_chinese">现在插入新设备信息</string>
    <string name="fake_device_chinese">伪造设备</string>
    <string name="complete_insert_data_following_chinese">完成插入以下数据:</string>
    <string name="insert_data_error_chinese">在插入数据时发现异常</string>
    <string name="insert_chinese">插入</string>
    <string name="update_chinese">更新</string>
    <string name="connected_chinese">已连接</string>
    <string name="control_plate_deployed">控制面板部署完成</string>
    <string name="not_support_control_chinese">不支持的控制</string>
</resources>