<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="24dp">

    <ImageView
        android:id="@+id/device_icon_in_dialog_of_more_info_scan_result_item"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ble" />

    <TextView
        android:id="@+id/device_name_in_dialog_of_more_info_scan_result_item"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/device_name_english"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/device_icon_in_dialog_of_more_info_scan_result_item"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/media_panel_in_dialog_of_more_info_scan_result_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toBottomOf="@id/device_icon_in_dialog_of_more_info_scan_result_item">

        <WebView
            android:id="@+id/device_web_search_of_media_panel_in_dialog_of_more_info_scan_result_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color" />

        <FrameLayout
            android:id="@+id/panel_container_of_media_panel_in_dialog_of_more_info_scan_result_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    //用户操作枚举-->
    <!--    final static byte WANT_START_CONTROL = 1;//开始设备控制-->
    <!--    final static byte WANT_ADD_TO_DEVICE = 2;//添加入"设备"-->
    <!--    final static byte WANT_STICK_TO_TOP = 3;//置顶,移动到列表顶部-->
    <!--    final static byte WANT_NONE = 4;//无操作-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/media_panel_in_dialog_of_more_info_scan_result_item">

        <FrameLayout
            android:id="@+id/container_start_control_in_dialog_of_more_info_scan_result_item"
            android:layout_width="64dp"
            android:layout_height="64dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_control_button_in_dialog_of_more_info_scan_result_item"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:text="@string/control_chinese"
                android:textColor="@color/text_color"
                app:backgroundTint="@android:color/transparent"
                app:icon="@drawable/control"
                app:iconGravity="textTop"
                app:iconTint="@color/icon_color" />

            <FrameLayout
                android:id="@+id/container_of_start_control_loading_in_dialog_of_more_info_scan_result_item"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center" />
        </FrameLayout>


        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_to_device_button_in_dialog_of_more_info_scan_result_item"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/add_chinese"
            android:textColor="@color/text_color"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/device"
            app:iconGravity="textTop"
            app:iconTint="@color/icon_color" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stick_to_top_button_in_dialog_of_more_info_scan_result_item"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/stick_to_top_chinese"
            android:textColor="@color/text_color"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/stick_to_top"
            app:iconGravity="textTop"
            app:iconTint="@color/icon_color" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismiss_button_in_dialog_of_more_info_scan_result_item"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="@string/return_chinese"
            android:textColor="@color/text_color"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/undo"
            app:iconGravity="textTop"
            app:iconTint="@color/icon_color" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>